# seocho-channel-tennis

./: .dockerignore  .gitignore  BUILD_GUIDE.md  Dockerfile  firebase_config.py  fly.toml  pyproject.toml  requirements.txt  seocho_tennis_club.py
assets/: create_icon.py
seocho_channel/: main.py
seocho_channel/assets/: create_icon.py
